Time: 17 ms (9.89%), Space: 50.9 MB (7.88%) - LeetHub